# TaintBlade

./: .gitignore  README.md
src/GUI/PinTracerUI/: CMakeLists.txt  CMakeLists.txt.user.71290d6  CMakeLists.txt.user.8884d09  DatabaseManager.cpp  DatabaseManager.h  ExecutionBridge.cpp  ExecutionBridge.h  Globals.cpp  MainToolBarResource.qrc  MultiWindowViewWidget.cpp  MultiWindowViewWidget.h  MultiWindowViewWidget.ui  PinConfigurationDialog.h  PinConfigurationDialog.ui  PinTracerUI.sln  PinTracerUI.vcxproj  PinTracerUI.vcxproj.filters  PinconfigurationDialog.cpp  ProtocolBufferDrawer.cpp  ProtocolBufferDrawer.h  ProtocolBufferWidget.cpp  ProtocolBufferWidget.h  ProtocolBufferWidget.ui  ProtocolVisualizationWidget.cpp  ProtocolVisualizationWidget.h  ProtocolVisualizationWidget.ui  TaintEventsWidget.cpp  TaintEventsWidget.h  TaintEventsWidget.ui  TaintRoutinesWidget.cpp  TaintRoutinesWidget.h  TraceFunctionsWidget.cpp  TraceFunctionsWidget.h  TracedFunctionsWidget.cpp  TracedFunctionsWidget.h  TracedFunctionsWidget.ui  TracedProcessDrawer.cpp  TracedProcessDrawer.h  TracedProcessWidget.cpp  TracedProcessWidget.h  (+5 more)
src/GUI/PinTracerUI/forms/: AboutDialog.ui  DLLSelectorDialog.ui  MainToolBarResource.qrc  NopSectionSelectorDialog.ui  ProtocolBufferDrawer.ui  ProtocolBufferElementVisualization.ui  ProtocolPartsWidget.ui  ProtocolVisualizationWidget.ui  TaintEventsWidget.ui  TaintRoutinesWidget.ui  TaintSourceSelectorDialog.ui  TraceFunctionsWidget.ui  TracePointSelectorDialog.ui  TracedProcessWidget.ui  mainwindow.ui
src/GUI/PinTracerUI/include/: mainwindow.h
src/GUI/PinTracerUI/include/common/: Globals.h
src/GUI/PinTracerUI/src/: main.cpp  mainwindow.cpp
(+886 files in other folders)
